# monorepo-example

./: .bazel_fix_commands.json  BUILD.bazel  LICENSE  README.md  TODO.md  WORKSPACE  deps.bzl  execctx.cue  execctx.json  execctx.schema.cue  go.mod  local.bzl
cfg/env/: BUILD.bazel  base.cue
cfg/execctx/: BUILD.bazel  base.cue
cfg/kafka/: BUILD.bazel  base.cue
cue.mod/: BUILD.bazel  module.cue
go/pkg/cfg/: BUILD.bazel  config.cue  embedded.go  execctx.yaml
protos/entities/: BUILD.bazel  person.proto
src/think/: BUILD.bazel  main.go
src/think/config/: think.cue
tools/: gopackagesdriver.sh
