load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "entities_proto",
    srcs = ["person.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "entities_go_proto",
    importpath = "github.com/aakarim/monorepo-example/protos/entities",
    proto = ":entities_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "entities",
    embed = [":entities_go_proto"],
    importpath = "github.com/aakarim/monorepo-example/protos/entities",
    visibility = ["//visibility:public"],
)

generated_file_test(name="gen", name=":entities")

